<resources>
    <string name="app_name">Vlasov-v-16</string>
    <string name="bank">Банк Заречный</string>
    <string name="olga">Добрый день, Ольга!</string>
    <string name="photo">TODO</string>
    <string name="pass">Введите пароль, чтобы войти в профиль</string>
    <string name="playn">___</string>
    <string name="playn2">___</string>
    <string name="playn3">___</string>
    <string name="playn4">___</string>
    <string name="k1">1</string>
    <string name="k2">2</string>
    <string name="k3">3</string>
    <string name="k4">4</string>
    <string name="k5">5</string>
    <string name="k6">6</string>
    <string name="k77">7</string>
    <string name="k8">8</string>
    <string name="k9">9</string>
    <string name="k10">X</string>
    <string name="k0">0</string>
    <string name="k11">OK</string>
    <string name="bankk">Банк Заречный</string>
    <string name="phot">TODO</string>
    <string name="balnce">На балансе:</string>
    <string name="olgaa">Ольга Захарова</string>
    <string name="dengi">9504 Р</string>
    <string name="perevot">Перевод:</string>
    <string name="Playn11">Номер карты</string>
    <string name="summa">Сумма перевода:</string>
    <string name="kartaspis">Выберете карту списания</string>
    <string name="nomerkar">Номер карты</string>
    <string name="summar">Сумма, Р</string>
    <string name="kartcher">TODO</string>
    <string name="charzhelt">TODO</string>
    <string name="balance3890">Баланс: 3890 Р</string>
    <string name="balance5614">Баланс: 5614 Р</string>
    <string name="perevesti">Перевести</string>
    <string name="linia">TODO</string>
</resources>